# nurtex

./: Cargo.toml  README.md  rustfmt.toml
crates/nurtex/: Cargo.toml  README.md
crates/nurtex-client/: Cargo.toml
crates/nurtex-client/examples/: minimal.rs
crates/nurtex-client/src/: client.rs  lib.rs  profile.rs  version.rs
crates/nurtex-codec/: Cargo.toml  README.md
crates/nurtex-codec/src/: buffer.rs  lib.rs  types.rs  varint.rs  varlong.rs
crates/nurtex-derive/: Cargo.toml
crates/nurtex-derive/src/: extract.rs  generate.rs  lib.rs  utils.rs
crates/nurtex-encrypt/: Cargo.toml
crates/nurtex-protocol/: Cargo.toml  README.md
crates/nurtex-protocol/examples/: minimal.rs
crates/nurtex-protocol/src/: lib.rs  packet.rs  reader.rs  writer.rs
crates/nurtex-protocol/tests/: client.rs
crates/nurtex-proxy/: Cargo.toml
crates/nurtex-proxy/src/: checker.rs  proxy.rs
crates/nurtex/examples/: bot_customization.rs  bot_with_proxy.rs  cluster_control.rs  minimal_swarm.rs  reading_packets.rs  reusable_swarm.rs  swarm_control.rs  swarm_reading_packets.rs  swarm_with_speedometer.rs
crates/nurtex/src/: lib.rs
docs/: EN.md  RU.md
examples/: custom_packet_handler.rs  custom_swarm.rs  swarm_control.rs
src/: export.rs  lib.rs
src/bot/: bot.rs  terminal.rs  transmitter.rs
src/bot/components/: components.rs  velocity.rs
src/bot/events/: events.rs
src/bot/physics/: physics.rs
src/bot/world/: chunk.rs  storage.rs
src/core/: bot.rs  common.rs  default.rs  mod.rs  swarm.rs  terminal.rs
src/core/events/: mod.rs  (+3 more)
src/swarm/: swarm.rs
src/utils/: time.rs
tests/: bot.rs  swarm.rs
(+61 files in other folders)
