[package]
name = "nurtex"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
azalea-protocol = { version = "0.15", features = ["connecting"] }
azalea-crypto = "0.15"
azalea-entity = "0.15"
azalea-core = "0.15"
uuid = { version = "1", features = ["v4"] }