[package]
name = "nurtex-encrypt"
version = "1.0.0"
edition = "2024"
license = "MIT"
description = "Library for Minecraft protocol encryption."
repository = "https://github.com/NurtexMC/nurtex"
homepage = "https://github.com/NurtexMC/nurtex"
documentation = "https://docs.rs/nurtex-encrypt/latest/"
readme = "README.md"
keywords = ["minecraft", "encrypt", "cryptography"]
categories = ["games"]

[lib]
name = "nurtex_encrypt"
path = "src/lib.rs"

[dependencies]
aes.workspace = true
cfb8.workspace = true
cipher.workspace = true
rand.workspace = true
sha1.workspace = true
rsa_public_encrypt_pkcs1.workspace = true